[project]
name = "deep-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Zach",email = "zachtvin@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "gymnasium[accept-rom-license] (==0.29.1)",
    "moviepy (==1.0.3)",
    "numpy (<2)",
    "opencv-python (==4.10.0.84)",
    "torch (==2.5.0)",
    "torchvision (==0.20.0)",
    "pytorch-ignite (==0.5.1)",
    "tensorboard (==2.18.0)",
    "mypy (==1.8.0)",
    "ptan (==0.8.1)",
    "stable-baselines3 (==2.3.2)",
    "torchrl (==0.6.0)",
    "ray[tune] (==2.37.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
